@@ -1,3 +1,7 @@
+master
+
+* Removed deprecated `:hint_class` option
+
 2.3.0.rc2
 
 * deprecate support for Rails < 3.2
